manifests/envs/desaparallel/web-front-admision-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-front-admision-sprintName
spec:
  selector:
    matchLabels:
      app: web-front-admision-sprintName
  template:
    metadata:
      labels:
        app: web-front-admision-sprintName
    spec:
      containers:
      - name: web-front-admision-sprintName
        image: imagen          
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests: 
            cpu: 250m
            memory: 64Mi
          limits: 
            cpu: 500m
            memory: 512Mi
      imagePullSecrets:
      - name: regcred-crdesacontainer
