manifests/envs/desaparallel/web-front-admision-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-front-admision-ingress-sprintName
  annotations:
       nginx.ingress.kubernetes.io/enable-cors: "true"
       nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
       nginx.ingress.kubernetes.io/configuration-snippet: |
          more_set_headers "Access-Control-Allow-Origin: $http_origin";
          more_set_headers "'Access-Control-Allow-Headers: Accept,Content-Type,Keep-Alive,Origin,x-access-token' always";
       kubernetes.io/ingress.class: nginx
       cert-manager.io/cluster-issuer: letsencrypt
       nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  tls:
    - hosts:
      - desa.sprintName.40.121.134.234.nip.io
      secretName: admision-web-cert
  rules:
  - host: desa.sprintName.40.121.134.234.nip.io 
    http:
      paths:
      - path: /web-admision(/?.*)
        backend:
          serviceName: web-front-admision-service-sprintName
          servicePort: 80
      - path: /web-firmadigital(/?.*)
        backend:
          serviceName: web-front-firmadigital-service-sprintName
          servicePort: 80   
      - path: /web-firmadigital-totem(/?.*)
        backend:
          serviceName: web-front-firmadigital-service-totem-sprintName
          servicePort: 80             
      - path: /web-digitalizador-documentos(/?.*)
        backend:
          serviceName: web-front-digitalizaciondocumentos-service-sprintName
          servicePort: 80   
      - path: /orquestador/(.*)
        backend:
          serviceName: api-orquestador-service-sprintName
          servicePort: 80
